@@ -3712,3 +3712,5 @@
 20111122 peripherals/if1.c,unittests/unittests.[ch]: ensure that we get the
          expected pages after the If1 has paged out again.
 20111122 peripherals/if2.[ch],unittests/unittests.[ch]: add If2 unit test.
+20111125 unittests/unittests.c,peripherals/speccyboot.[ch]: add SpeccyBoot
+         unit test.
